--- a/extension/package.json
+++ b/extension/package.json
@@ -17,6 +17,7 @@
     "@ellucian/ds-icons": "https://cdn.elluciancloud.com/assets/EDS2/6.8.0/umd/path_design_system_icons.tgz",
     "@ellucian/experience-extension": "https://cdn.elluciancloud.com/assets/SDK/6.0.0/ellucian-experience-extension-6.0.0.tgz",
     "@ellucian/react-design-system": "https://cdn.elluciancloud.com/assets/EDS2/6.8.0/umd/path_design_system.tgz",
+    "axios": "^1.3.4",
     "classnames": "2.2.6",
     "moment": "2.29.4",
     "prop-types": "15.7.2",
